feat(search): fix fulltext index & add searchVideo
