# docs/api.yaml
@@ -300,7 +300,6 @@ paths:
     get:
       operationId: v1-search-user-key&page-get
       summary: 搜索用户
-      description: 返回分页数据，total 字段固定为 -1
       tags:
       - Search
       consumes:
@@ -318,8 +317,8 @@ paths:
       - name: key
         in: query
         type: string
-        required: false
-        allowEmptyValue: true
+        required: true
+        allowEmptyValue: false
         description: 搜索关键词
       security: []
       responses:
@@ -348,6 +347,70 @@ paths:
                       "authority": "admin",
                       "phone_number": "13512345678",
                       "register_time": "2020-01-10 00:30:49"
+                    }
+                  ]
+                }
+              }
+  /v1/search/video?key&page:
+    get:
+      operationId: v1-search-video-key&page-get
+      summary: 搜索视频
+      tags:
+      - Search
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      parameters:
+      - name: page
+        in: query
+        type: integer
+        required: false
+        allowEmptyValue: false
+        description: 当前页
+        default: 1
+      - name: key
+        in: query
+        type: string
+        required: true
+        allowEmptyValue: false
+        description: 搜索关键词
+      security: []
+      responses:
+        '400':
+          description: |-
+            "request param error"
+        '200':
+          schema:
+            $ref: '#/definitions/Result<Page<VideoDto>>'
+          examples:
+            application/json: |-
+              {
+                "code": 200,
+                "message": "success",
+                "data": {
+                  "count": 1,
+                  "page": 1,
+                  "data": [
+                    {
+                      "vid": 1,
+                      "title": "The First Video",
+                      "description": "This is the first video uploaded",
+                      "video_url": "123",
+                      "cover_url": "http://localhost:3344/v1/raw/image/avatar.jpg",
+                      "upload_time": "2020-01-10 00:55:36",
+                      "update_time": "2020-01-10 14:31:00",
+                      "author": {
+                        "uid": 1,
+                        "username": "admin",
+                        "sex": "male",
+                        "profile": "Demo admin profile",
+                        "avatar_url": "http://localhost:3344/v1/raw/image/avatar.jpg",
+                        "birth_time": "2020-01-10",
+                        "authority": "admin",
+                        "phone_number": "13512345678",
+                        "register_time": "2020-01-10 00:30:49"
+                      }
                     }
                   ]
                 }
